# libtokyo

./: .eslintrc.js  .gitignore  .gitmodules  .prettierignore  README.md  build.config.ts  crowdin.yaml  default.nix  flake.nix  meson.build  meson_options.txt  package-lock.json  package.json  pubspec.yaml  shell.nix  tailwind.config.js  tsconfig.json  uncrustify.cfg
.github/workflows/: dart.yaml  flutter.yaml  i18n.yaml  nix.yaml
applications/: meson.build
applications/prism/: make.js  meson.build
applications/prism/default/: meson.build
applications/prism/light/: meson.build
applications/prism/storm/: meson.build
build-tools/: meson.build
build-tools/src/: extract-adwaita.c  extract-adwaita.vala
core/: meson.build
core/docs/: meson.build
core/examples/: main.vala
core/lib/: application.vala  applicationwindow.vala  build.vala.in  main.vala  provider.vala  stylemanager.vala  tokyo.deps.in  window.vala
core/tests/: meson.build
design/: README.md
example/: README.md  pubspec.yaml
example/android/app/src/debug/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/windows/: CMakeLists.txt
example/windows/runner/: main.cpp
gtk3/: meson.build
gtk3/data/: tokyo-gtk.gresource.xml.in
gtk3/docs/: meson.build
gtk3/examples/: main.vala
gtk3/lib/: application.vala  applicationwindow.vala  build.vala.in  calendar.vala  calendarevents.vala  events.vala  eventslist.vala  init.vala  provider.vala  stylemanager.vala  tokyo-gtk3.deps.in  window.vala
gtk3/po/: POTFILES.in  POTFILES.skip  en_US.po  meson.build
gtk3/styling/: base.scss  common.scss  default.scss  functions.scss  light.scss  storm.scss
gtk3/styling/widgets/: buttons.scss  color-chooser.scss  dialogs.scss  file-chooser.scss  header-bar.scss  level-bar.scss  lists.scss  menus.scss  message-dialog.scss  misc.scss  preferences.scss  progress-bar.scss  scale.scss  shortcuts-window.scss  spin-button.scss  spinner.scss  text-selection.scss  toolbars.scss  window.scss
gtk3/tests/: applicationwindow.vala  meson.build
gtk4/: meson.build
gtk4/data/: tokyo-gtk.gresource.xml.in
gtk4/docs/: meson.build
gtk4/examples/: main.vala
gtk4/lib/: application.vala  applicationwindow.vala  build.vala.in  calendarevents.vala  init.vala  provider.vala  stylemanager.vala  tokyo-gtk4.deps.in  window.vala
gtk4/po/: POTFILES.in  POTFILES.skip  en_US.po  meson.build
gtk4/styling/: base.scss  default.scss  light.scss  storm.scss  theme.scss.in
gtk4/tests/: application.vala  meson.build  window.vala
lib/: libtokyo.dart  theme.dart
lib/theme/: styles.dart
lib/theme/styles/: base.dart  night-storm.dart
po/: POTFILES.in  POTFILES.skip  en_US.po  meson.build
scripts/: export-package.js  patch-adwaita-styles.js  update-package.js
src/: build.h.in  build.vala.in  tokyo-gtk.gresource.xml.in
src/examples/gtk3/: main.vala
src/examples/gtk4/: main.vala
src/gtk3/: application.vala  applicationwindow.vala  stylemanager.vala  window.vala
src/gtk4/: application.vala  applicationwindow.vala  init.vala  stylemanager.vala  window.vala
src/styling/gtk3/: base.scss  default.scss  drawing.scss  light.scss  storm.scss  widgets.scss
src/styling/gtk3/widgets/: checks.scss  dropdowns.scss  emoji-chooser.scss  entries.scss  expanders.scss  labels.scss  notebook.scss  scale.scss  switch.scss  tab-view.scss  tooltip.scss  trees.scss  view-switcher.scss  views.scss
src/styling/gtk4/: light.scss  storm.scss
src/styling/palettes/: default.scss  light.scss
src/styling/tailwindcss/: default.ts  index.ts
styling/: index.ts
styling/palettes/: index.ts  storm.scss
styling/tailwindcss/: base.ts  light.ts  storm.ts
subprojects/: ntk.wrap
theme/: index.theme.in  meson.build
theme/default/: meson.build
theme/default/gtk-3.0/: meson.build
theme/default/gtk-4.0/: meson.build
theme/light/: meson.build
theme/light/gtk-3.0/: meson.build
theme/light/gtk-4.0/: meson.build
theme/storm/: meson.build
theme/storm/gtk-3.0/: meson.build
theme/storm/gtk-4.0/: meson.build
