option('gtk4', type: 'feature', value: 'auto', description: 'Enable GTK4')
option('gtk3', type: 'feature', value: 'auto', description: 'Enable GTK3')
option('ntk', type: 'feature', value: 'auto', description: 'Enable NTK')

option('nodejs', type: 'feature', value: 'auto', description: 'Enable NodeJS support')
